# git-commit-analyzer

./: .gitignore  AGENTS.md  AUTOMATION_SETUP.md  BUGFIX_REPORT.md  CI_CD_FLOW.md  CLAUDE.md  Cargo.toml  DEPLOY.md  HOMEBREW.md  HOMEBREW_FIX.md  INSTALL.md  LICENSE  QUICK_START.md  README-cn.md  README-dev.md  README-en.md  README.md  README_ES.md  README_FR.md  README_ZH.md  body-test-final.md  build.rs  debug-body-test.md  demo-final.md  enhanced-test.md  generate_commit.py  git-ca.rb  git_ca_install.sh  install-git-ca.sh  test-body.md  test-detailed.md
.cursor/rules/: commit-message-generation.mdc  dependencies-and-configuration.mdc  installation-and-usage.mdc  project-structure.mdc  release-and-homebrew.mdc
.github/: FUNDING.yml
.github/workflows/: build-binaries.yml  release.yml
include/git_ca/: mlx_bridge.h
models/: model_q4f16.onnx
src/: llama.rs  main.rs  mlx.rs  mlx_bridge.cc  mlx_bridge.rs
vscode-extension/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
vscode-extension/src/: extension.ts
