[package]
name = "git-ca"
version = "1.0.0"
description = "AI-powered Git plugin for generating meaningful commit messages"
authors = ["Henry Zhang <hello@zhanghe.dev>"]
license = "MIT"
repository = "https://github.com/zh30/git-commit-analyzer"
edition = "2021"

[dependencies]
git2 = "0.18"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"