[package]
name = "git-ca"
version = "2.0.15"
description = "AI-powered Git plugin for generating meaningful commit messages"
authors = ["Henry Zhang <hello@zhanghe.dev>"]
license = "MIT"
repository = "https://github.com/zh30/git-commit-analyzer"
edition = "2021"

[dependencies]
git2 = "0.18"
llama-cpp-sys-2 = "0.1"
hf-hub = { version = "0.4.3", default-features = false, features = ["ureq", "native-tls"] }
rand = "0.9"

# Test comment
